@@ -56,6 +56,10 @@ PluginRegistry
 ----------------------
 * Remove deprecated method PluginRegistry.getDefaultProperties(String pluginName).
 
+Project
+----------------------
+* Add "projectname" property to properties passed to Builder.build().
+
 ProjectConfig
 ----------------------
 * Fixed a bug where ProjectConfig.stop() was calling Project.start() instead of Project.stop(). The effect of this would be for projects that have been removed from config.xml to continue to build.
